--- a/projectIt/src/templates/layout-2.html
+++ b/projectIt/src/templates/layout-2.html
@@ -7,6 +7,11 @@
 <body>
   <div class="main">
       {% include "partials/header.html" %}
+     
+      {% block content %}
+      
+      {% endblock %}
+      
       {% include "partials/content-index.html" %}
       {% include "partials/before-footer.html" %}
       {% include "partials/footer.html" %}
