--- a/projectIt/src/templates/partials/header.html
+++ b/projectIt/src/templates/partials/header.html
@@ -1,25 +1,16 @@
 <div class="header">
   <div class="header_resize">
-    <div class="menu_nav">
-      <ul>
-        <li class="active"><a href="index.html"><span>Home Page</span></a></li>
-        <li><a href="support.html"><span>Support</span></a></li>
-        <li><a href="about.html"><span>About Us</span></a></li>
-        <li><a href="blog.html"><span>Blog</span></a></li>
-        <li><a href="contact.html"><span>Contact Us</span></a></li>
-      </ul>
-    </div>
+
+    <!-- Slider added for inparts folder -->
+    {% include "inparts/navigation.html" %}
+    
     <div class="logo">
       <h1><a href="index.html">it<span>Simple</span></a></h1>
     </div>
     <div class="clr"></div>
-    <div class="slider">
-      <div id="coin-slider">
-        <a href="#"><img src={{ img1 }} width="960" height="360" alt="" />
-        </a> <a href="#"><img src={{ img2 }} width="960" height="360" alt="" />
-        </a> <a href="#"><img src={{ img2 }} width="960" height="360" alt="" /> </a> </div>
-      <div class="clr"></div>
-    </div>
+    <!-- Slider added for inparts folder -->
+    {% include "inparts/slider.html" %}
+    
     <div class="clr"></div>
   </div>
 </div>
