--- a/project-consult/src/templates/partials/head.html
+++ b/project-consult/src/templates/partials/head.html
@@ -5,4 +5,4 @@
 <meta charset="utf-8">
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/css.css?family=Roboto:100,300,400,500,700%7CPlayfair+Display:400,700,700i,900,900i"> 
-<link rel="stylesheet" href="assets/style.css">
+<link rel="stylesheet" href="css/style.css">
