--- a/project-32/src/templates/layout-main.html
+++ b/project-32/src/templates/layout-main.html
@@ -7,9 +7,17 @@
 <body data-spy="scroll" data-target="#navbarResponsive">
 <!--- Start Home Section -->
 <section id="home">
+  
   <!---  navigation  -->
     {% include "partials/nav.html" %}
   <!--- navigation -->
+
+  <!---  Landing page section  -->
+    {% include "partials/landing.html" %}
+  <!--- Landing end -->
+
+</section>
+<!--- End Home Section -->
 
   <!--- Start Course Section -->
     {% include "partials/course.html" %}
@@ -27,8 +35,7 @@
     {% include "partials/contact.html" %}
   <!--- End contact Section -->
 
-</section>
-<!--- End Home Section -->
+
 
 
 
