--- a/project-32/src/templates/partials/features.html
+++ b/project-32/src/templates/partials/features.html
@@ -1,3 +1,36 @@
 <section id="features" class="offset">
+  <!-- Start jumbotron -->
+  <div class="jumbotron">
+    <div class="narrow">
 
+      <div class="col-12">
+        <h3 class="heading">Features</h3>
+        <div class="heading-underline"></div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <div class="feature">
+            <i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
+            <h3>Custom Animation</h3>
+            <p>This is Atom. Atom is a software to write code. You can write different languages code here.</p>
+          </div>
+        </div> <!-- End col-md-4 -->
+        <div class="col-md-4">
+          <div class="feature">
+            <i class="fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+            <h3>Content Slider</h3>
+            <p>This is Atom. Atom is a software to write code. You can write different languages code here.</p>
+          </div>
+        </div> <!-- End col-md-4 -->
+        <div class="col-md-4">
+          <div class="feature">
+            <i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-4"></i>
+            <h3>Contact Form</h3>
+            <p>This is Atom. Atom is a software to write code. You can write different languages code here.</p>
+          </div>
+        </div> <!-- End col-md-4 -->
+      </div>
+
+    </div>
+  </div><!-- end Jumbortron -->
 </section>
