--- a/project-32/src/templates/partials/resources.html
+++ b/project-32/src/templates/partials/resources.html
@@ -1,3 +1,18 @@
 <section id="resources" class="offset">
+  <div class="fixed-background">
+    <div class="row dark">
+      <div class="col-12">
+        <h3 class="heading">Built with NS</h3>
+        <div class="heading-underline"></div>
+      </div>
 
+    </div> <!-- end row dark  -->
+      <div class="fixed-wrap">
+        <div class="fixed">
+
+        </div>
+      </div>
+
+
+  </div> <!-- end fixed-background  -->
 </section>
