--- a/project-32/src/templates/partials/course.html
+++ b/project-32/src/templates/partials/course.html
@@ -1,3 +1,7 @@
 <section id="course" class="offset">
-
+  <div class="col-12 narrow text-center">
+    <h1>Advance Premium Bootstrap Theme</h1>
+    <p class="lead">Learn Bootstrap from Bootstrap Advance Functions.</p>
+    <a class="btn btn-secondary btn-md" href="#" target="">Bootstrap Classes</a>
+  </div>
 </section>
