--- a/project-32/src/templates/partials/nav.html
+++ b/project-32/src/templates/partials/nav.html
@@ -1,3 +1,28 @@
-<nav class="navber navber-expand-md navber-dark bg-dark fixed-top">
-  <a class="navber-brand" href="#"><img src="images/nuno.png" alt=""/></a>
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#"><img src="images/nuno.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#home">Home </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#course">Course</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#features">Features </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#resources">Resources</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
+    </ul>
+
+  </div>
 </nav>
